Update map overview

--- a/map-overview/index.html
+++ b/map-overview/index.html
@@ -35,7 +35,7 @@
         let element = document.querySelector('#map-overview')
 
         // Add the image
-        element.src = image
+        element.src = "../" + image
 
         // And pass it to panzoom: https://github.com/anvaka/panzoom
         panzoom(element, {
